# book-recommendation-engine

./: .coverage  .dockerignore  .env.template  .gitignore  Makefile  README.md  check_database.py  deploy.ps1  docker-compose.reader.yml  docker-compose.yml  graph TB.txt  prometheus.reader.yml  prometheus.yml  pyproject.toml  pytest.ini  sequenceDiagram.txt
.github/workflows/: ci.yml
book_recommendation_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data/: CSV_FORMAT_REQUIREMENTS.md  catalog_openlibrary_sample.csv  catalog_sample.csv  checkouts_sample.csv  students_sample.csv
data/vector_store/: index.faiss  index.pkl
deploy/: README.md  deploy.sh  docker-compose.prod.yml  nginx.conf  nuke_and_rebuild.ps1  total_system_rebuild.sh
grafana/dashboards/: reader-mode-dashboard.json  reader-mode-overview.json
logs/: service_logs.jsonl
nginx/: nginx.conf
scripts/: README.md  debug_openlibrary.py  get_openlibrary_sample.py  manage_enrichment.py  monitor_enrichment_system.py  test_enrichment_priority_system.py  test_enrichment_system.py  test_idempotency.py  test_null_based_enrichment.py
sql/: 00_init_schema.sql  01_incremental_schema.sql  02_add_reading_level.sql
src/: .coverage  __init__.py  alembic.ini  alembic_local.py  cli.py  metrics_dashboard.py
src/alembic/: env.py
src/book_enrichment_worker/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
src/book_recommendation_engine.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/common/: __init__.py  events.py  kafka_utils.py  llm_client.py  logging.py  metrics.py  models.py  performance.py  reading_level_utils.py  redis_utils.py  settings.py  structured_logging.py  testing.py  tools.py  weights.json  weights.py
src/embedding/: __init__.py  base.py  book.py  rec_history.py  student.py
tests/: conftest.py  factories.py  live_test_fetch_book_meta_live.py  test_book_enrichment.py  test_book_flattener.py  test_csv_utils.py  test_feedback_worker.py  test_fetch_book_meta.py  test_integration_ingestion_graph.py  test_kafka_utils.py  test_llm_integration.py  test_models_validators.py  test_phase2_integration.py  test_prompts.py  test_reader_mode_api.py  test_reader_mode_feature_flag.py  test_reader_mode_models.py  test_reading_level_computation.py  test_recommendation_api.py  test_recommendation_deduplication.py  test_recommendation_service.py  test_redis_utils.py  test_scoring.py  test_seed_random.py  test_streamlit_reader_mode.py  test_structured_logging.py  test_student_flattener.py  test_student_reading_level.py  test_system_integration.py  test_user_ingest_service.py  test_uuid_tracking.py
(+115 files in other folders)
