[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-recommendation-engine"
version = "0.1.0"
description = "Book recommendation engine with AI"
authors = [
    {name = "Dan Guilliams",email = "dan.guilliams@danguilliams.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-openai", 
    "langchain-community",
    "langgraph",
    "openai>=1.10.0",
    "mcp",
    "fastmcp",
    "langchain-mcp-adapters",
    "sqlalchemy[asyncio]",
    "asyncpg>=0.29.0",
    "psycopg2-binary",
    "aiokafka>=0.9.0",
    "pandas",
    "faiss-cpu",
    "textstat>=0.7.3",
    "aiohttp>=3.9.1",
    "asyncio-throttle",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.28.1",
    "requests>=2.31.0",
    "typer",
    "rich",
]

[project.scripts]
bre = "src.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
