[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-recommendation-engine"
version = "0.1.0"
description = "Book recommendation engine with AI"
authors = [
    {name = "Dan Guilliams",email = "dan.guilliams@danguilliams.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-openai", 
    "langchain-community",
    "langgraph",
    "openai>=1.10.0",
    "mcp",
    "fastmcp",
    "langchain-mcp-adapters",
    "sqlalchemy[asyncio]",
    "asyncpg>=0.29.0",
    "psycopg2-binary",
    "alembic>=1.13.0",
    "aiokafka>=0.9.0",
    "pandas",
    "faiss-cpu",
    "textstat>=0.7.3",
    "aiohttp>=3.9.1",
    "asyncio-throttle",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.28.1",
    "requests>=2.31.0",
    "typer",
    "rich",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "redis (>=6.2.0,<7.0.0)",
]

[project.scripts]
bre = "src.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"


[tool.poetry.group.test.dependencies]
testcontainers = {extras = ["postgres"], version = "^4.10.0"}

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "testcontainers[postgres]>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing -q"